# orianne-ftp-lib

./: .gitignore  CMakeLists.txt  CMakeWindows.bat  LICENSE  README  README.md  orianne.sln
cmake/: orianne-ftpConfig.cmake.in
example/: CMakeLists.txt  example.vcxproj
example/src/: main.cpp
orianne/: CMakeLists.txt  orianne-ftp-lib.vcxproj  orianne-ftp-lib.vcxproj.filters  resource.h
orianne/include/orianne/: ftp_server.h
orianne/src/: filesystem.cpp  filesystem.h  ftp_console.cpp  ftp_console.h  ftp_server.cpp  ftp_session.cpp  ftp_session.h  stdafx.h
